# lxmusic

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  README  autogen.sh  build  configure.ac  configure.in  gtk-builder-convert  lxmusic.c  nl.po
data/: Makefile.am  lxmusic.1  lxmusic.desktop.in  lxmusic.glade  lxmusic.ui.glade  popup.glade  popup.ui.glade  pref-dlg.glade  pref-dlg.ui.glade  track-info.glade  track-info.ui.glade
debian/: changelog  control  copyright  rules
po/: ChangeLog  LINGUAS  POTFILES.in  af.po  ar.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  es_ES.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lg.po  lt.po  lxmusic-ve.po  lxmusic.pot  (+30 more)
src/: Makefile.am  lxmusic-notify.c  lxmusic-notify.h  lxmusic-plugin-config.c  lxmusic-plugin-config.h  lxmusic.c  utils.c  utils.h
