dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(lxmusic, 0.2.3)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INTLTOOL(, [no-xml])

gtk_modules="gtk+-2.0 >= 2.12.0 gmodule-export-2.0"
PKG_CHECK_MODULES(GTK, [$gtk_modules])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

xmmsc_modules="xmms2-client >= 0.5\
	xmms2-client-glib"
PKG_CHECK_MODULES(XMMSC, [$xmmsc_modules])
AC_SUBST(XMMSC_CFLAGS)
AC_SUBST(XMMSC_LIBS)

# Gtk Builder
#AC_PATH_PROG([GTK_BUILDER_CONVERT],[gtk-builder-convert],[false])
#if test "$GTK_BUILDER_CONVERT" = "false"; then
#  AC_MSG_ERROR([gtk-builder-convert not found])
#fi

GETTEXT_PACKAGE=lxmusic
#AM_GNU_GETTEXT_VERSION(0.14.1)

AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="zh_TW de es_ES hu sv pt_PT et it pl_PL"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
data/Makefile
data/lxmusic.desktop
src/Makefile
po/Makefile.in
])

