dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(lxmusic, 0.2.3)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

# Required Packages
m4_define([gtk_minimum_version], [2.14.0])
m4_define([gmodule_export_minimum_version], [2.0])
m4_define([xmms2_minimum_version], [0.6])
m4_define([xmms2_client_glib_minimum_version], [0.6])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INTLTOOL(, [no-xml])

PKG_CHECK_MODULES(LXMUSIC,
        [gtk+-2.0 >= gtk_minimum_version
	gmodule-export-2.0 >= gmodule_export_minimum_version
	xmms2-client >= xmms2_minimum_version
	xmms2-client-glib >= xmms2_client_glib_minimum_version])

GETTEXT_PACKAGE=lxmusic

AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS="ar cs da de es et eu fa fi fr gl hu id it ja ko lt ml nb nl nn pl ps pt pt_BR ru sk sl sv tr uk vi zh_CN zh_TW"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
data/Makefile
data/lxmusic.desktop
src/Makefile
po/Makefile.in
])

